alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
   font-family: "CustomFont", sans-serif;
   font-weight: 400;
   font-style: normal;
+  text-align: center;
 
 }
 body {
